add script tracking

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>prdev.io - Building reliable software. Powering digital ideas.</title>
     <meta name="description" content="prdev.io is a digital product and development company that builds and maintains lean, scalable web-based solutions for both internal products and client services." />
+    <script defer src="https://umami-pr.up.railway.app/script.js" data-website-id="d863022f-2aef-4645-986a-2dd1765ac8f8"></script>
   </head>
   <body>
     <div id="root"></div>
